--- a/TopNavigation.html
+++ b/TopNavigation.html
@@ -12,6 +12,13 @@
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
     </div>
+    <div class="topnavul">
+      <ul>
+        <li class="active">Home</li>
+        <li>New</li>
+        <li>About</li>
+      </ul>
+    </div>
   </body>
 </html>
 <style>
@@ -32,5 +39,22 @@
     }
     .topnav a.active{
       background-color: chartreuse;
+    }
+    ul {
+      background-color: black;
+      overflow: hidden;
+      list-style-type: none;
+    }
+    ul li{
+      float: left;
+      text-align: center;
+      color: red;
+      padding: 14px 16px;
+    }
+    ul li.active{
+      background-color: violet;
+    }
+    ul li:hover{
+      background-color: yellow;
     }
 </style>
