--- a/IconBar.html
+++ b/IconBar.html
@@ -15,9 +15,28 @@
   <a href="#"><i class="fa fa-globe"></i></a>
   <a href="#"><i class="fa fa-trash"></i></a>
 </div>
+<div class="icon-bar2">
+  <a class="active" href="#"><i class="fa fa-home"></i></a>
+  <a href="#"><i class="fa fa-search"></i></a>
+  <a href="#"><i class="fa fa-envelope"></i></a>
+  <a href="#"><i class="fa fa-globe"></i></a>
+  <a href="#"><i class="fa fa-trash"></i></a>
+</div>
   </body>
 </html>
 <style>
+  .icon-bar2{
+    background-color:#555;
+      overflow: hidden;
+      float:left;
+  }
+  .icon-bar2 a{
+      padding: 35px;
+      display: block;
+      text-align: center;
+      font-size:36px;
+      color: antiquewhite;
+    }
   body {margin:0;}
     .icon-bar{
       background-color:#555;
