--- a/CanvasFolder/Snake/Snake.html
+++ b/CanvasFolder/Snake/Snake.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="608" height="608"></canvas>
   </body>
   <script src="js/snake.js"></script>
   <script src="js/main.js"></script>
@@ -14,6 +14,5 @@
   </html>
   <style>
     body {
-      margin: 0px;
     }
   </style>
