--- a/CanvasFolder/Snake/Snake.html
+++ b/CanvasFolder/Snake/Snake.html
@@ -9,10 +9,9 @@
     <canvas id="canvas" width="608" height="608"></canvas>
   </body>
   <script src="js/snake.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/main.js"></script> -->
 
   </html>
   <style>
-    body {
-    }
+    
   </style>
