--- a/CanvasFolder/Brick/brick.html
+++ b/CanvasFolder/Brick/brick.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="canvas" height="680" width="680"></canvas>
   </body>
+  <script src="genLMethod.js"></script>
   <script src="Shape.js"></script>
   <script src="main.js"></script>
 
