--- a/CaroGame/CaroGame.html
+++ b/CaroGame/CaroGame.html
@@ -8,7 +8,12 @@
 <body>
     <script src="method.js"></script>
     <script src="main.js"></script>
-<div class="container" id="main">
-</div>
+    <div class="container">
+        <label>CPT</label>
+        <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+        <div id='main'>
+
+        </div>
+    </div>
 </body>
 </html>
